# pg-blast-radius

./: .gitignore  Cargo.toml  LICENSE  README.md
scripts/: record_demo.py
site/: index.html
src/: analysis.rs  forecast.rs  lib.rs  locks.rs  main.rs  parse.rs  recipe.rs  types.rs  workload.rs
src/catalog/: live.rs  mod.rs  stats_file.rs  workload.rs
src/output/: json.rs  mod.rs  terminal.rs
src/rules/: alter_table.rs  constraints.rs  create_index.rs  drop.rs  maintenance.rs  mod.rs  rename.rs
testdata/: demo-migration.sql  demo-stats.json
testdata/fixtures/: add_check_constraint.sql  add_check_not_valid.sql  add_column_volatile_default.sql  add_foreign_key.sql  add_foreign_key_not_valid.sql  alter_type_rewrite.sql  alter_type_safe.sql  alter_type_timestamp.sql  create_index.sql  create_index_concurrently.sql  drop_column.sql  drop_index.sql  drop_index_concurrently.sql  multi_statement_dangerous.sql  set_not_null_safe_pattern.sql  validate_constraint.sql
tests/: integration.rs
tests/snapshots/: integration__insta_create_index_large_table.snap  integration__insta_multi_statement.snap  integration__insta_set_not_null.snap
