[package]
name = "pg-blast-radius"
version = "0.1.0"
edition = "2024"
description = "PostgreSQL migration risk analyser with catalog-aware blast radius estimation"
license = "MIT"

[dependencies]
pg_query = "6"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
owo-colors = "4"
tokio = { version = "1", features = ["rt", "net"], optional = true }
tokio-postgres = { version = "0.7", optional = true }

[features]
default = ["catalog"]
catalog = ["dep:tokio", "dep:tokio-postgres"]

[dev-dependencies]
insta = { version = "1", features = ["json"] }
